# yt

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  RESEARCH.md
src/: cli.rs  commands.rs  config.rs  error.rs  external.rs  id.rs  main.rs  output.rs
src/youtube/: dataapi.rs  innertube.rs  invidious.rs  mod.rs  oembed.rs
