[package]
name = "yt"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "A CLI for YouTube transcripts, downloads, and metadata — usable by humans and AI agents."
authors = ["Soham Zemse <soham@zemse.in>"]
license = "MIT"
repository = "https://github.com/zemse/yt"
homepage = "https://github.com/zemse/yt"
readme = "README.md"
keywords = ["youtube", "cli", "transcript", "yt-dlp"]
categories = ["command-line-utilities"]
exclude = ["PLAN.md", "RESEARCH.md"]

[[bin]]
name = "yt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
dirs = "5"
which = "6"
